test/tests/stages/18_structures/invalid_types/initializers/init_struct_with_string.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: chars
        Bool: 0
        List[4]: 
          CMemberDeclaration: 
            TIdentifier: a
            Char: 
          CMemberDeclaration: 
            TIdentifier: b
            Char: 
          CMemberDeclaration: 
            TIdentifier: c
            Char: 
          CMemberDeclaration: 
            TIdentifier: null
            Char: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: my_chars
                  CSingleInit: 
                    CString: 
                      CStringLiteral: 
                        List[3]: 
                          TChar: 97
                          TChar: 98
                          TChar: 99
                      None: 
                    None: 
                  Structure: 
                    TIdentifier: chars
                    Bool: 0
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
